fix issue with alignment

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,6 @@
 .root {
   max-width: 640px;
+  align-items: center;
   margin: 4rem auto;
   padding: 2rem 2.5rem;
   border-radius: 1.5rem;
